--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -10,7 +10,7 @@ First, there is three points that should be remarked.
 
 \section{Limitations with simulation}
 
-
+Simulating many nodes behavior when each depend on everyone else is not computationally easy. Even without calculating the best price for each edge and relying on the suggested probabilistic model. This reduces the amount of nodes that can be simulated, especially considering the scope of this thesis. Although a few aspects of smaller networks probably holds true in larger networks, such as the revenue distribution; it most likely does not for attachment. In the comparison of attachment models, the Barabasi-Albert and Hassan-Islam-Haque models comes up short - this is most likely due to the networks size. As hubs becomes more useful the larger the network.  
 
 \section{Balanced Channels}
 
