--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -857,10 +857,10 @@ year = "",
 % My repositories
 
 @misc{repository:me:thesis,
-	author = {},
-	title = {Thesis source repository},
+	author = {Markstedt, John-John},
+	title = {lightning-strategy-simulation},
 	howpublished = {
-		\url{https://github.com/Johnstedt/master-thesis-ln-fee-estimation}},
+		\url{https://github.com/Johnstedt/lightning-strategy-game-simulation}},
 	note = {},
 	year = "",
 }
@@ -1183,7 +1183,7 @@ year = "",
 @article{
 	turner:chao:prisoners:dilemma,
 	author = { Turner, Paul E. and Chao, Lin},   
-	title = { Prisoner's dilemmain an RNA virus },
+	title = { Prisoner's dilemma in an RNA virus },
 	journal = { Nature },
 	volume = {398},
 	pages = {441-443},
