--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -37,10 +37,12 @@
 
 \newglossaryentry{Lightning Network}{name={Lightning Network}, description={is a second layer payment protocol consistent of payment channels built on a blockchain based base layer. Although it is not necesarily exclusive to Bitcoin; Bitcoin is the only base layer with major development efforts. The Lightning Network, as referred in this thesis, always refers to the network built on Bitcoin }}
 
-\newglossaryentry{channel}{name={channel}, description={, payment channel or micropayment channel is a locked up fund of Bitcoin between two nodes enabling near infinite secure payments at the cost of only a few on-chain transactions }}
+\newglossaryentry{channel}{name={channel}, description={A channel, payment channel or micropayment channel is a locked up fund of Bitcoin between two nodes enabling near infinite secure payments at the cost of only a few on-chain transactions }}
 
 \newglossaryentry{hash}{name={hash},description={a crypographic hash is created with a hashing function taking data of arbitrary size and outputs a hash with fixed size. The input data is usually difficult, or practically impossible, to inference the input data from the hash. A hash is sometimes referred to as a digest }}
 
 \newglossaryentry{node}{name={node},description={A node is participating actor in a network, a node is usually linked to other nodes through edges. Node is used somewhat ambigous in this thesis as both the Bitcoin Network protocol participants and the Lightning Network participants is referred to as nodes. Also referred to as a \textit{vertex}}}
 
-\newglossaryentry{label}{name={name},description={description}}
+\newglossaryentry{path}{name={path},description={A path or route is a set of edges, or nodes from one source node to another. The shortest path between node $a$ and $b$ is usually denoted $\sigma_{ab}$}}
+
+\newglossaryentry{UTXO}{name={UTXO},description={Unspent Transaction Output, is an output from a Bitcoin transaction that has not been spent yet. It is sometimes referred to as simply output, although output is strictly broader}}
