--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -1297,3 +1297,16 @@ year = "",
 		\url{https://arxiv.org/pdf/1901.04620.pdf}},
 	haveit =   {pdf}
 }
+
+@article{crypto-1993-1108,
+	title={Untraceable Off-line Cash in Wallets with Observers (Extended Abstract)},
+	journal={Advances in Cryptology - CRYPTO '93}, 
+	series={Lecture Notes in Computer Science},
+	publisher={Springer},
+	volume={773},
+	pages={302-318},
+	doi={10.1007/3-540-48329-2_26},
+	author={Stefan Brands},
+	year=1993,
+	stuff=", 13th Annual International Cryptology Conference, Santa Barbara, California, USA, August 22-26, 1993, Proceedings"
+}
