--- a/docs/thesis/problem.tex
+++ b/docs/thesis/problem.tex
@@ -15,7 +15,7 @@ Many payment channels can be aggregated into a network. There is an ongoing effo
 
 How the routing nodes should operate is still vastly unexplored. The node provides liquidity to payment and procures fees whenever his channels are used in a payment route. It is likely that a market for liquid channels will emerge, however strategically well allocated liquidity may earn much more than poorly allocated liquidity. The nodes may chose who to open channels with, what fee to set, how much liquidity should be locked up on each channel and when to re-balance channels.
 
-A simulation environment was implemented, along with operational strategies. Implemented strategies was then be simulated to see how well they perform against each other.
+A simulation environment was implemented, along with operational strategies. The strategies were then combined and simulated to see how well they perform against each other.
 
 \section{Aim}
     \label{sec:aim}
@@ -27,7 +27,7 @@ This thesis aims to address following two questions:
 	
 		\item What network topology will the \gls{Lightning Network} converge towards as routing nodes becomes increasingly efficient?
 		
-		\item Is routing a profitable venture? ..
+		\item How will the revenue be distributed between the routing nodes? Will the low barrier to entry reduce the market to low margins? 
 		%\item What network topology will the \gls{Lightning Network} converge towards as routing nodes becomes increasingly efficient in terms of degree distribution, robustness and diameter?
 		
 	\end{enumerate}
@@ -39,7 +39,7 @@ This thesis aims to address following two questions:
 	
 	The actual routing in LN has been researched~\cite{distasi:avallone:cononico:routing} and implementations are currently in use~\cite{repository:clightning, repository:lnd, repository:eclair, repository:lit}. Further efficient sharing of routing tables have been proposed~\cite{gunspan:marco:ant}.
 	
-	A similar problem at first glance, the estimation of the on-chain Bitcoin Network Fee has been covered extensively~\cite{mosterland:transaction:fee, houy:transaction:fee}. However it's neither applicable, nor is it even similar as a problem set. The Bitcoin Fee problem is far simpler as the competing transaction fees(mem-pool) are known at all times and estimating a fee too low can be corrected by \textit{fee bumping}\footnote{Broadcasting a new transaction spending the same UTXO with a higher fee.} or \textit{child-pay-for-parent}\footnote{Using the unconfirmed parent UTXO in a new transaction, a miner must include the parent tx to be able to mine the child tx and receive the child tx fee.} implementations.
+	A similar problem at first glance, the estimation of the on-chain Bitcoin Network Fee has been covered extensively~\cite{mosterland:transaction:fee, houy:transaction:fee}. However it's neither applicable, nor is it even similar as a problem set. The Bitcoin Fee problem is far simpler as the competing transaction fees(mem-pool) are known at all times and estimating a fee too low can be corrected by \textit{fee bumping}\footnote{Broadcasting a new transaction spending the same \gls{UTXO} with a higher fee.} or \textit{child-pay-for-parent}\footnote{Using the unconfirmed parent UTXO in a new transaction, a miner must include the parent tx to be able to mine the child tx and receive the child tx fee.} implementations.
 	
 	As the Lightning Network is indeed a network and many problems are yet another incarnation of already solved graph problems. A nodes position in a network has been studied and specifically the measurement of Betweenness Centrality, as introduced by Freeman in 1977~\cite{brandes:betweenness:centrality:algorithm}, lays a sound basis for fee estimation. Calculating paths in graphs are as old as the computing field itself with Floyd-Warshall, Johnson~\cite{johnson:shortest:path:sparse:network} and Dijkstras algorithms all being appropriate here. The attributes of the network as strategies emerge have consequences on throughput and robustness have also been researched in the field of topology. Especially that of scale free networks by Barabasi and Albert~\cite{barabasi:albert:emergent:scaling} is of concern here.
 	
