--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -1308,5 +1308,6 @@ year = "",
 	doi={10.1007/3-540-48329-2_26},
 	author={Stefan Brands},
 	year=1993,
-	stuff=", 13th Annual International Cryptology Conference, Santa Barbara, California, USA, August 22-26, 1993, Proceedings"
+	stuff=", 13th Annual International Cryptology Conference, Santa Barbara, California, USA, August 22-26, 1993, Proceedings",
+	link="https://pdfs.semanticscholar.org/494f/68ea362c88203e87306e729f1a669a2b491c.pdf"
 }
