--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -1,4 +1,4 @@
-% Macroeconomy
+% Macroeconomy	
 
 @misc{
 	repository:bitcoin:sourceforge,
@@ -1120,6 +1120,13 @@ year = "",
 	howpublished = {
 		\url{https://goalkicker.com/AlgorithmsBook}
 	}
+}
+
+@book{
+	credit:swiss:distribution,
+	author = { Credit Suisse, Research Institute},
+	title = "Global Wealth Databook 2018",
+	year = "2018"
 }
 
 
